--- a/src/app/shell/shell.component.scss
+++ b/src/app/shell/shell.component.scss
@@ -1,4 +1,3 @@
-
 .header {
   position: fixed;
   top: 0;
@@ -7,6 +6,7 @@
   justify-content: space-between;
   align-items: center;
   padding: var(--spacing-one) var(--spacing-two);
+  background-color: var(--color-bg);
 }
 
 .back-icon {
@@ -21,21 +21,22 @@
   transition: transform 300ms ease;
   padding: var(--spacing-two);
 
-  .backdrop {
-    position: absolute;
-    height: 100vh;
-    width: 100vw;
-    margin: calc(var(--spacing-two) * -1);
-    background-color: var(--color-primary);
-    opacity: 0;
-    transition: opacity 300ms ease;
-  }
-
   &.faded {
     transform: translateY(-70%);
+  }
+}
 
-    .backdrop {
-      opacity: 0.3;
-    }
+.backdrop {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: var(--color-primary);
+  opacity: 0;
+  transition: opacity 300ms ease;
+  
+  &.faded {
+    opacity: 0.3;
   }
 }
